--- a/docs/Makefile.am
+++ b/docs/Makefile.am
@@ -13,7 +13,7 @@ DOC_VERSION = $(VERSION): $(DSC_VERSION)
 EXTRA_DIST += bse-categories.txt interpolation.txt ChangeLog.svn
 
 # == Doxygen Install Rules ==
-htmldocsbase  = $(pkgdocdir)
+htmldocsbase  = $(docdir)
 htmldocsdir   = ${htmldocsbase}/html
 htmldocs_DATA = html/doc-version		# build dependency for doxygen docs
 htmlparent    = $(if $(findstring \#, ..\@INGIT@..), $(srcdir), $(builddir))
