--- a/docs/images/Makefile.am
+++ b/docs/images/Makefile.am
@@ -7,5 +7,5 @@ SVG_FILES = beast-components.svg  beast-progs.svg  module-voices.svg
 
 # PNG_FILES = beast-components.png  beast-progs.png  module-voices.png
 # docimages_DATA = $(PNG_FILES)
-# docimagesdir = $(pkgdatadir)/images
+# docimagesdir = $(datadir)/images
 # EXTRA_DIST += $(PNG_FILES)
