--- a/data/bse.pc.in
+++ b/data/bse.pc.in
@@ -7,13 +7,13 @@ includedir=@includedir@
 pkgincludedir=@includedir@/bse-@MAJOR@
 
 sfidl=@exec_prefix@/sfidl
-demodir=@pkgdatadir@/demo
-sampledir=@pkgdatadir@/samples
-scriptdir=@pkgdatadir@/scripts
+demodir=@datadir@/demo
+sampledir=@datadir@/samples
+scriptdir=@datadir@/scripts
 plugindir=@bselibdir@/plugins
 driverdir=@bselibdir@/drivers
-effectdir=@pkgdatadir@/effects
-instrumentdir=@pkgdatadir@/instruments
+effectdir=@datadir@/effects
+instrumentdir=@datadir@/instruments
 
 Name: Beast & Bse
 Description: Beast & Bse are an audio tracker and audio synthesis engine.
