--- a/debian/rules
+++ b/debian/rules
@@ -31,3 +31,5 @@ override_dh_install:
 override_dh_auto_install:
 	dh_auto_install
 	find debian/tmp -name '*.la' -delete
+override_dh_makeshlibs: # for -X<findpattern>, see: fgrep -C5 EXCLUDE_FIND /usr/share/perl5/Debian/Debhelper/Dh_Lib.pm
+	dh_makeshlibs '-X/bse-[0-9.]+/drivers/'
