--- a/data/beast.desktop.in
+++ b/data/beast.desktop.in
@@ -1,12 +1,11 @@
 [Desktop Entry]
-Encoding=UTF-8
 Type=Application
 _Name=BEAST
 _GenericName=Music Composer
 _Comment=MIDI Tracker, Music Composition and Modular Synthesis Application
 Icon=beast.png
 TryExec=beast
-Exec=beast
+Exec=beast %F
 Terminal=false
-Categories=GTK;GNOME;Audio;AudioVideo;AudioVideoEditing;Music;Player;Sequencer;Midi;
+Categories=GTK;GNOME;Audio;AudioVideo;AudioVideoEditing;Music;Player;Sequencer;Midi;Mixer;AudioVideoEditing
 MimeType=audio/x-bse;audio/x-bsewave;
