--- a/.travis.yml
+++ b/.travis.yml
@@ -70,4 +70,11 @@ notifications:
   irc:
     channels:
       - "irc.gimp.org#beast"
+    on_success: change # always / never / change
+    on_failure: change # always / never / change
+    skip_join: true
   email: false
+    #recipients:
+    #  - beast@gnome.org
+    #on_success: change
+    #on_failure: change
