TRAVIS: the pdebuild host system needs dh-autoreconf installed for beast builds
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ sudo: required # needed for apt-get and pbuilder
 
 addons:
   apt:
-    packages: [ pbuilder, devscripts, debhelper ] # debootstrap
+    packages: [ pbuilder, devscripts, debhelper, dh-autoreconf ] # debootstrap
 
 before_install:
   - uname -a
