--- a/Makefile.decl
+++ b/Makefile.decl
@@ -59,12 +59,23 @@ check-am: check-before
 check-local: check-after
 check-local: ; @:
 check-devel: ; @:
-TESTS=
 
 # == check-devel ==
 if ENABLE_DEVEL_MODE
 check-after: check-devel
 endif
+
+# == TAPTESTS ==
+# tests run through taptool.sh
+TAPTESTS     =
+TAPTEST_RUNS = $(addsuffix .taprun, $(basename $(TAPTESTS)))
+.PHONY: tcheck $(TAPTEST_RUNS)
+tcheck: $(top_srcdir)/taptool.sh
+	$(MAKE) $(AM_MAKEFLAGS) --no-print-directory $(TAPTEST_RUNS)
+$(TAPTEST_RUNS): %.taprun: % # static pattern rule - also works for phony targets
+	$(Q) test "$@" = "$(@F)" || { echo "$@: test program outside CWD" >&2; exit 1; }
+	$(Q) TST="$(@:%.taprun=%)"; $(top_srcdir)/taptool.sh --test-name "$$TST" -- ./"$$TST"
+check: tcheck
 
 # === slowcheck ===
 # recursive rule supported by all Makefiles to run time consuming checks
@@ -107,7 +118,7 @@ perf-PERFTESTS:
 PERFTESTS=
 
 # === ALLTESTS ===
-ALLTESTS = $(TESTS) $(SLOWTESTS) $(PERFTESTS) # used in noinst_PROGRAMS
+ALLTESTS = $(TESTS) $(TAPTESTS) $(SLOWTESTS) $(PERFTESTS) # used in noinst_PROGRAMS
 
 # === report ===
 .PHONY: report
