SFI: tests: run tests as TAPTESTS
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/sfi/tests/Makefile.am
+++ b/sfi/tests/Makefile.am
@@ -11,24 +11,24 @@ progs_ldadd 	  = $(top_builddir)/sfi/libsfi-@MAJOR@.la $(RAPICORN_LIBS) $(SFI_LI
 SFIDL 		  = $(top_builddir)/sfi/sfidl
 
 # ring
-TESTS       += ring
+TAPTESTS    += ring
 ring_SOURCES = ring.cc
 ring_LDADD   = $(progs_ldadd)
 
 # misctests
-TESTS	          += misctests
+TAPTESTS          += misctests
 misctests_SOURCES  = misctests.cc
 misctests_LDADD	   = $(progs_ldadd)
 $(srcdir)/misctests.cc: testidl.h testidl.c
 
 # testcxx
-TESTS	       += testcxx
+TAPTESTS	       += testcxx
 testcxx_SOURCES = testcxx.cc
 testcxx_LDADD   = $(progs_ldadd)
 $(srcdir)/testcxx.cc: testidl.h testidl.c
 
 # testsfidl
-TESTS	         += testsfidl
+TAPTESTS         += testsfidl
 testsfidl_SOURCES = testsfidl.cc
 testsfidl_LDADD   = $(progs_nosfi_ldadd)
 $(srcdir)/testsfidl.cc: testidl.h testidl.c
