BUILD: add -export-dynamic and -Bsymbolic-functions to AM_LDFLAGS
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/configure.ac
+++ b/configure.ac
@@ -150,12 +150,18 @@ AC_PROG_LD
 AC_LANG_CPLUSPLUS	# use CXX for compilation tests
 AC_LIB_PROG_LD
 AC_LIB_PROG_LD_GNU
-ACX_PROG_LD_GNU_SYMBOLIC
-AC_SUBST([SYMBOLIC_LDFLAGS])
-ACX_PROG_LD_GNU_DYNAMIC_LIST_CPP_NEW
-AC_SUBST([DYNAMIC_LIST_CPP_NEW_LDFLAGS])
 AM_PROG_LIBTOOL
 AC_LIBTOOL_DLOPEN
+ACX_PROG_LD_GNU_SYMBOLIC
+# SYMBOLIC_LDFLAGS is included in DYNAMIC_LIST_CPP_NEW_LDFLAGS
+ACX_PROG_LD_GNU_DYNAMIC_LIST_CPP_NEW
+MC_EVAR_ADD(AM_LDFLAGS, $DYNAMIC_LIST_CPP_NEW_LDFLAGS)
+MC_EVAR_ADD(AM_LDFLAGS, -pthread)
+MC_EVAR_ADD(AM_LDFLAGS, -lrt)
+MC_EVAR_ADD(AM_LDFLAGS, [-Wl,--no-undefined])
+if ${LD} --help 2>&1 | grep -q -- '-export-dynamic\b' ; then
+  MC_EVAR_ADD(AM_LDFLAGS, [-Wl,-export-dynamic])
+fi
 
 # AM_LDFLAGS, optimize linker to use faster ELF symbol hashing if we have compiler and linker support
 AC_MSG_CHECKING([whether CC and LD support gnu.hash sections])
@@ -166,9 +172,6 @@ if ${CC-cc} -dumpspecs | grep -q -- '--hash-style=\(both\|gnu\).*--as-needed' &&
 else
   AC_MSG_RESULT(no)
 fi
-MC_EVAR_ADD(AM_LDFLAGS, -pthread)
-MC_EVAR_ADD(AM_LDFLAGS, -lrt)
-MC_EVAR_ADD(AM_LDFLAGS, [-Wl,--no-undefined])
 AC_SUBST(AM_LDFLAGS)
 
 # Pick C++ dialect, needed in CXXFLAGS for compile tests
