BSE: pybse: add pysupport.hh to dist tarballs
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/bse/pybse/Makefile.am
+++ b/bse/pybse/Makefile.am
@@ -29,7 +29,7 @@ nodist_Bse_la_SOURCES = Bse.cc        # nodist_ forces build time generation
 Bse_la_CXXFLAGS       = $(PYTHON_CPPFLAGS) $(AM_CXXFLAGS) -I$(AIDASTDINC) -Wno-redundant-decls -Wno-unused-function
 Bse_la_LDFLAGS        = $(PYTHON_LDFLAGS) $(AM_LDFLAGS) -no-undefined -module -avoid-version
 Bse_la_LIBADD         = $(RAPICORN_LIBS)  ../libbse-@MAJOR@.la # $(top_builddir)/bse/libbse-@MAJOR@.la
-EXTRA_DIST           += Bse.pyx
+EXTRA_DIST           += Bse.pyx pysupport.hh
 CLEANFILES           += bseidlapi.pyx Bse.cc
 
 # call python with uninstalled or fully installed modules
