--- a/debian/rules
+++ b/debian/rules
@@ -32,6 +32,8 @@ override_dh_auto_install:
 	dh_auto_install
 	@ # https://wiki.debian.org/ReleaseGoals/LAFileRemoval
 	find debian/tmp -name '*.la' -delete
+	@ # fix package-installs-python-bytecode
+	find debian/tmp -name '*.py[co]' -delete
 	@ # fix binary-without-manpage usr/bin/beast-0.9.3
 	LNK=`basename debian/tmp/usr/bin/beast-*` && \
 	ln -s beast.1 debian/tmp/usr/share/man/man1/$$LNK.1
